# skilless.ai

./: .gitignore  README.md  README.zh.md  TROUBLESHOOT.md  pyproject.toml
.github/workflows/: release.yml
homepage/: .gitignore  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
homepage/public/: install  install.ps1
homepage/src/components/: About.astro  CoreTools.astro  FAQ.astro  Footer.astro  GettingStarted.astro  Hero.astro  Highlights.astro  LLMGuide.astro  Nav.astro  Skills.astro  UseCases.astro
homepage/src/i18n/: ui.ts  utils.ts
homepage/src/layouts/: BaseLayout.astro
homepage/src/pages/: index.astro
homepage/src/pages/zh/: index.astro
homepage/src/styles/: global.css
scripts/: install  install-dev.sh  install.ps1
src/skilless/: SKILL.md  pyproject.toml
src/skilless.ai-brainstorming/: SKILL.md
src/skilless.ai-research/: SKILL.md
src/skilless.ai-writing/: SKILL.md
src/skilless/scripts/: cli.py  ffmpeg.py  rss.py  search.py  web.py  youtube.py
